"ChangeLog"

2007-01-21	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-64-merged-chpsim-01-54:
	  Major branch merge of -chpsim-01.
	  See src/ChangeLog for gory details.
	  Short story: we now have chpsim.  


2007-01-20	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-63-chpsim-01-52:
	  New AC_OUTPUT: test/chpsim/testlib/Makefile.


2007-01-16	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-63-chpsim-01-44:
	  Make.stddef and global Makefile.am clean-ups for maintainability.  


2006-12-01	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-63-merged-channel-02-09:
	  Branch merge.  src/ChangeLog for summary.  


2006-11-28	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-62-channel-02-02:
	  configure.ac, config/hackt.m4: added option to re-enable the
		now-obsolete unroll phase tests in test suite.  
		Unrolling is now deprecated because it has been fused
		into the create phase -- they are now one and inseparable.


2006-11-25	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-58:
	  dox/ChangeLog only -- improved LaTeX dependency management.  


2006-11-14	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-53:
	  configure.ac: test for more libc functions, many related to 
		streams, pipes and process control.  
	  Make.global: fixed help echo entry for build-check.


2006-11-12	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-52-merged-test-12:
	  Merged branch for test parallelization and other miscellaneous
		Makefile maintainence.  


2006-11-11	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-50-test-11:
	  config/hackt.m4: renamed NO_VPATH to AUTO_CVSIGNORE, also 
		added to it a test if srcdir is writeable.
	  Make.global: now generates .cvsignore in the $(srcdir) if permitted.


	* HACKT-00-01-04-main-00-80-50-test-09: