@@ -3,14 +3,14 @@
 # (Prior to 2005/06/19, this file was "configure.in", 
 #	in case one should want to trace back the CVS revision history.)
 #
-#	$Id: configure.ac,v 1.109 2007/01/21 05:58:04 fang Exp $
+#	$Id: configure.ac,v 1.110 2007/01/24 04:14:42 fang Exp $
 
 # Hint: Try running "autoscan" for suggestions on what should go in here.  
 # Results of autoscan appear in "configure.scan".  
 
 AC_PREREQ(2.59)
 dnl also works with autoconf 2.60 now
-AC_INIT(hackt, 0.1.4-devel-20070121, fangism@users.sourceforge.net)
+AC_INIT(hackt, 0.1.4-devel-20070123, fangism@users.sourceforge.net)
 dnl prefer to push this into src directory, 
 dnl and have "src/config.h" wrap around this.  
 AC_CONFIG_HEADERS([src/__config__.h])
@@ -422,6 +422,8 @@ AC_CONFIG_FILES([
 	dox/man/Makefile
 	dox/tutorial/Makefile
 	dox/cast2hac/Makefile
+	dox/prsim/Makefile
+	dox/chpsim/Makefile
 	lib/Makefile
 	hackt.doxygen.config
 ])
