@@ -1,15 +1,15 @@
 # "dox/Makefile.am"
 # root Makefile for dox directory
-#	$Id: Makefile.am,v 1.9 2006/08/15 20:05:04 fang Exp $
+#	$Id: Makefile.am,v 1.10 2007/01/24 04:14:43 fang Exp $
 
 include $(top_srcdir)/Make.stddef
 
-SUBDIRS = mk lang util objfmt man tutorial cast2hac
+SUBDIRS = mk lang util objfmt man tutorial cast2hac prsim chpsim
 # don't actually go into the latex directory, generated by doxygen
 # NOTE: mk must be built first to copy maketexdepend.tex to the builddir first.
 
 EXTRA_DIST += README TODO ChangeLog local.cvsignore \
-	common/README common/hacdef.tex
+	common/README common/hacdef.tex common/hac.bib
 
 .NOTPARALLEL: pdf ps
 
