@@ -1,10 +1,11 @@
 % "cast2hac/CHP.tex"
-%	$Id: CHP.tex,v 1.3 2006/06/27 02:33:09 fang Exp $
+%	$Id: CHP.tex,v 1.4 2007/01/24 04:14:44 fang Exp $
 
 \section{CHP}
 \label{sec:chp}
 
-The CHP language is slightly different in \hac\ than in \CAST.  
+The CHP language, based on Hoare's CHP, 
+ is slightly different in \hac\ than in \CAST~\cite{ref:csp}.  
 
 \subsection{Lexical Conventions}
 \label{sec:chp:lex}
@@ -30,4 +31,9 @@ Rationale: syntactic consistency and disambiguation with the
 concurrency operator (comma).  
 
 
+\subsection{New features}
+\label{sec:chp:new}
+
+Compile-time meta-parameter repetitive expansions:
+see the \hac\ Language documentation's CHP chapter.  
 
