@@ -1,5 +1,5 @@
 % "hac.bib"
-%	$Id: hac.bib,v 1.3 2006/10/06 03:30:09 fang Exp $
+%	$Id: hac.bib,v 1.1 2007/01/24 04:14:47 fang Exp $
 
 @STRING{ cacm = "Communications of the ACM" }
 
