@@ -1,5 +1,5 @@
-% "cast2hac.tex"
-%	$Id: cast2hac.tex,v 1.12 2007/01/24 04:14:45 fang Exp $
+% "prsim.tex"
+%	$Id: prsim.tex,v 1.1 2007/01/24 04:14:53 fang Exp $
 
 \documentclass[12pt]{article}
 
@@ -20,7 +20,7 @@
 \ifpdf
 \usepackage[
 	draft=false,
-	pdftitle={CAST to HAC Migration Guide}, 
+	pdftitle={The HACKT PRSIM Manual}, 
 	pdfauthor={David Fang}, 
 	hyperfigures, 
 	hyperindex, 
@@ -41,7 +41,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 
-\title{CAST to HACKT Migration Guide}
+\title{The HACKT PRSIM Manual}
 \author{David Fang}
 
 % \ifpdf\pdfbookmark[0]{Title Page}{title}\fi
@@ -53,23 +53,33 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % main contents
 
-\input intro
-\input types
-\input definitions
-\input instances
-\input arrays
-\input connections
-\input loops
-\input templates
-\input typedefs
-\input PRS
-\input CHP
-\input spec
-\input cflat
+\section{Introduction}
+\label{sec:intro}
+
+\ttt{prsim} is a production rule simulator...
+
+\subsection{History}
+\label{sec:intro:history}
+
+Where it all began...
+
+% \input intro
+% \input types
+% \input definitions
+% \input instances
+% \input arrays
+% \input connections
+% \input loops
+% \input templates
+% \input typedefs
+% \input PRS
+% \input CHP
+% \input spec
+% \input cflat
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\ifpdf\pdfbookmark[0]{Bibliography}{bibliography}\fi
-\bibliography{hac}
+% \ifpdf\pdfbookmark[0]{Bibliography}{bibliography}\fi
+% \bibliography{hac}
 
 % \clearpage
 % \ifpdf\pdfbookmark[0]{Index}{index}\fi
